# mock-embedded-io

./: Cargo.toml  readme.md
src/: lib.rs
